--- a/pages/about.html
+++ b/pages/about.html
@@ -301,6 +301,8 @@
 										<p>面对开发者保持开源，开发者可开发属于自己的导航站点,特别鸣谢由
 											<a href="http://viggoz.com/">Viggoz</a>为本导航站提供框架，源框架WebStackPage
 											<a href="https://github.com/WebStackPage/WebStackPage.github.io">Github</a>仓储。
+											<a href="https://github.com/ZakaryGates/MUXDWebStack.github.io">本站Github仓储地址</a>
+											<a href="https://zakarygates.github.io/MUXDWebStack.github.io/">演示地址</a>
 										</p>
 									</blockquote>
 								</div>
